# Study_NLP

./: README.md  pyproject.toml
1.tokenization/: tokenization.ipynb
2.BOW/: BOW.ipynb
3.Transformer/: dot product attention.ipynb  encorder.ipynb
Transformer/: Transformer.ipynb
