[tool.poetry]
name = "study-nlp"
version = "0.1.0"
description = ""
authors = ["jungbug <xbox1111@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
ipykernel = "^6.29.1"
konlpy = "^0.6.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
